finished html for main page (index.html)

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
             <div class="text-container">
                 <h5>Upcoming workshops</h5>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex harum maxime, explicabo ipsum quo fuga a autem incidunt odio, molestiae maiores omnis doloribus repellendus. Magni rem illo exercitationem velit. Voluptate vel quo quisquam esse. Quia iusto maiores earum officia amet?</p>
-            </div>
+                <button>Read More</button>
+            </div><!-- text container ends -->
 
             <div class="img-container">
                 <img src="./planted-final-assets/right-flowers.jpg" alt="green hydrangea bush">
@@ -56,11 +57,72 @@
             <div class="text-container">
                 <h5>Unique plants to discover</h5>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim facere quam sapiente nesciunt dolorum dolores animi quaerat soluta quisquam eveniet asperiores quibusdam quia non, voluptas ut commodi accusantium? Nesciunt quas ad corporis similique ea ab tenetur asperiores eligendi cumque laudantium!</p>
-            </div>
+                <button>Read More</button>
+            </div><!-- text container ends -->
+        </section><!-- plants and workshops section ends -->
 
+        <section class="resources">
+            <div class="wrapper">
+                <ul>
+                    <li>
+                        <h6>Green houses</h6>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum et, blanditiis ipsa fuga explicabo maiores commodi aperiam eos molestiae iure consectetur distinctio quaerat architecto aspernatur minus, saepe pariatur nobis sunt.</p>
+                    </li>
+                    <li>
+                        <h6>Community</h6>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis deserunt voluptates asperiores laboriosam dignissimos velit doloremque neque recusandae necessitatibus enim, saepe commodi qui voluptatibus? Earum accusamus aperiam culpa nihil corrupti.</p>
+                    </li>
+                    <li>
+                        <h6><a href="#">Blog</a></h6>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nulla recusandae tenetur obcaecati consequuntur nam ea illo aliquam! Debitis dolor consectetur in at nobis rem ut unde quaerat officiis consequatur?</p>
+                    </li>
+                    <li>
+                        <h6>Get in touch</h6>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque repellat perferendis accusantium veritatis molestias deserunt quae, ratione fugit veniam blanditiis quis maxime pariatur aliquid laboriosam autem hic cum iusto voluptas?</p>
+                    </li>
+                </ul>
+            </div><!-- wrapper ends -->
+        </section><!-- resources section ends -->
 
-        </section>
-    </main>
+        <div class="main-banner">
+            <!-- insert image as background -->
+        </div>
+
+        <section class="founder">
+            <div class="wrapper">
+                <div class="img-container">
+                    <img src="./planted-final-assets/founder.jpg" alt="photo of founder standing in large garden">
+                </div>
+                <div class="text-container">
+                    <h4>Planted's Founder</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima similique harum voluptates laudantium adipisci placeat distinctio veritatis nobis sunt facere tempore exercitationem ex sequi velit explicabo aspernatur, minus neque ipsum nemo temporibus architecto, et dolorem rem provident! Quidem, vero voluptatum quis fugiat numquam corrupti animi, doloribus voluptatibus laboriosam tempore maxime.</p>
+                    <button>Find Out More</button>
+                </div><!-- text container ends -->
+            </div><!-- wrapper ends -->
+        </section><!-- founder section ends -->
+
+        <section class="gallery">
+            <div class="wrapper">
+                <ul>
+                    <li>
+                        <img src="./planted-final-assets/gallery-image-1.jpg" alt="green house with large plants and trees">
+                    </li>
+                    <li>
+                        <img src="./planted-final-assets/gallery-image-2.jpg" alt="small potted succulents and cacti">
+                    </li>
+                    <li>
+                        <img src="./planted-final-assets/gallery-image-3.jpg" alt="several species of cacti sitting on windowsill">
+                    </li>
+                </ul>
+            </div><!-- wrapper ends -->
+        </section><!-- gallery section ends -->
+    </main><!-- main ends -->
+
+    <footer>
+        <div class="wrapper">
+            <p>Copyright © 2018 HackerYou</p>
+        </div>
+    </footer>
 
 </body>
 </html>
