created contact.html folder and finished html for it

--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <title>Planted</title>
 </head>
 <body>
-    <header>
+    <header id="home">
         <div class="wrapper">
             
             <nav class="main-nav">
                 <h1>Planted</h1>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="./blog.html">Blog</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </nav><!-- main nav ends -->
 
             <div>
-                <h2>Planted invitation</h2>
+                <h2><span>Planted</span> invitation</h2>
                 <div class="header-img-2"></div>
             </div>
 
@@ -121,8 +121,8 @@
     <footer>
         <div class="wrapper">
             <p>Copyright © 2018 HackerYou</p>
-        </div>
-    </footer>
+        </div><!-- wrapper ends -->
+    </footer><!-- footer ends -->
 
 </body>
 </html>
