created blog.html and finished html content

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
             </div>
 
         </div><!-- wrapper ends -->
-    </header>
+    </header><!-- header ends -->
 
     <main>
         <div class="wrapper">
@@ -49,7 +49,7 @@
                 <p>M5V 2D5</p>
             </div><!-- contact information ends -->
 
-            <div class="form-container">
+            <div class="contact-form-container">
                 <form action="#" class="contactForm" name="contactForm">
                     <label for="name" class="sr-only">Name</label>
                     <input type="text" id="name" placeholder="Name" required>
@@ -71,6 +71,6 @@
             <p>Copyright © 2018 HackerYou</p>
         </div><!-- wrapper ends -->
     </footer><!-- footer ends -->
-    
+
 </body>
 </html>
