--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
 
         </div><!-- wrapper ends -->
-    </header>
+    </header><!-- header ends -->
 
     <main>
         <section class="about" id="about">
