--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planted - Blog</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Roboto&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="./styles/style.css"> 
 </head>
 <body>
     <header id="contact">
@@ -103,6 +107,6 @@
             <p>Copyright © 2018 HackerYou</p>
         </div><!-- wrapper ends -->
     </footer><!-- footer ends -->
-    
+
 </body>
 </html>
