--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planted - Contact</title>
     <script src="https://kit.fontawesome.com/a0e4c21e13.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Roboto&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="./styles/style.css"> 
 </head>
 <body>
     <header id="contact">
