finished general styles partial

--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./styles/style.css"> 
 </head>
 <body>
-    <header id="contact">
+    <header class="blog-header" id="contact">
         <div class="wrapper">
             
             <nav class="main-nav">
