--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./styles/style.css">  
 </head>
 <body>
-    <header id="home">
+    <header class="index-header" id="home">
         <div class="wrapper">
             
             <nav class="main-nav">
@@ -26,7 +26,9 @@
 
             <div>
                 <h2><span>Planted</span> invitation</h2>
-                <div class="header-img-2"></div>
+                <div class="header-img-2">
+                    <!-- insert image as background -->
+                </div>
             </div>
 
         </div><!-- wrapper ends -->
