--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./styles/style.css"> 
 </head>
 <body>
-    <header id="contact">
+    <header class="contact-header" id="contact">
         <div class="wrapper">
             
             <nav class="main-nav">
