finished header and about section on index page

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Roboto&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./styles/style.css">  
 </head>
-<body>
-    <header class="index-header" id="home">
+<body class="index">
+    <header id="home">
         <div class="wrapper">
             
             <nav class="main-nav">
@@ -25,7 +25,7 @@
             </nav><!-- main nav ends -->
 
             <div>
-                <h2><span>Planted</span> invitation</h2>
+                <h2><span>Planted</span> Invitation</h2>
                 <div class="header-img-2">
                     <!-- insert image as background -->
                 </div>
@@ -39,7 +39,7 @@
             <div class="wrapper">
                 <div class="about-content">
                     <h3>What is Planted?</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, ex! Officiis, accusamus laboriosam eius sunt, nemo officia repellendus ullam recusandae sed ducimus delectus ab quisquam dolor porro architecto fugiat rerum. Odio fugiat ad explicabo eos totam! Numquam pariatur rerum, commodi eos repellendus rem. Eveniet id ullam, mollitia, ex sed deserunt libero optio neque iste nisi aliquid commodi quasi veritatis, consectetur aperiam ad voluptatem possimus eos! Expedita error dolores, repellendus distinctio vero amet, obcaecati, ea quasi cum a recusandae incidunt! Ullam.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo molestiae provident, eligendi hic harum distinctio sapiente atque eius exercitationem, consequuntur voluptates maiores corporis magni doloremque natus velit nulla consectetur, debitis laudantium alias aperiam adipisci tenetur esse perspiciatis. Quod, sed. Neque totam qui iusto error facere.</p>
                     <button>Find Out More</button>
                 </div>
             </div><!-- wrapper ends -->
