finished mid section of index page, added mixins to partials

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Planted</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Roboto&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a0e4c21e13.js" crossorigin="anonymous"></script> 
     <link rel="stylesheet" href="./styles/style.css">  
 </head>
 <body class="index">
@@ -46,45 +47,52 @@
         </section><!-- about section ends -->
 
         <section class="plants-and-workshops">
-            <div class="img-container">
-                <img src="./planted-final-assets/left-flowers.jpg" alt="flower arrangement with pink roses">
-            </div>
+            
 
-            <div class="text-container">
-                <h5>Upcoming workshops</h5>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex harum maxime, explicabo ipsum quo fuga a autem incidunt odio, molestiae maiores omnis doloribus repellendus. Magni rem illo exercitationem velit. Voluptate vel quo quisquam esse. Quia iusto maiores earum officia amet?</p>
-                <button>Read More</button>
-            </div><!-- text container ends -->
+            <div class="plants">
+                <div class="img-container">
+                    <img src="./planted-final-assets/left-flowers.jpg" alt="flower arrangement with pink roses">
+                </div>
 
-            <div class="img-container">
-                <img src="./planted-final-assets/right-flowers.jpg" alt="green hydrangea bush">
-            </div>
+                <div class="text-container">
+                    <h5>Unique plants to discover</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim facere quam sapiente nesciunt dolorum dolores animi quaerat soluta quisquam eveniet asperiores quibusdam quia non, voluptas ut commodi accusantium?</p>
+                    <button>Read More</button>
+                </div><!-- text container ends -->
+            </div><!-- plants ends -->
 
-            <div class="text-container">
-                <h5>Unique plants to discover</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim facere quam sapiente nesciunt dolorum dolores animi quaerat soluta quisquam eveniet asperiores quibusdam quia non, voluptas ut commodi accusantium? Nesciunt quas ad corporis similique ea ab tenetur asperiores eligendi cumque laudantium!</p>
-                <button>Read More</button>
-            </div><!-- text container ends -->
+            <div class="workshops">
+                <div class="img-container">
+                    <img src="./planted-final-assets/right-flowers.jpg" alt="green hydrangea bush">
+                </div>
+
+                <div class="text-container">
+                    <h5>Upcoming workshops</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex harum maxime, explicabo ipsum quo fuga a autem incidunt odio, molestiae maiores omnis doloribus repellendus. Magni rem illo exercitationem velit. Voluptate vel quo quisquam esse.</p>
+                    <button>Read More</button>
+                </div><!-- text container ends -->
+            </div><!-- workshops ends -->
+
         </section><!-- plants and workshops section ends -->
 
         <section class="resources">
             <div class="wrapper">
                 <ul>
                     <li>
-                        <h6>Green houses</h6>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum et, blanditiis ipsa fuga explicabo maiores commodi aperiam eos molestiae iure consectetur distinctio quaerat architecto aspernatur minus, saepe pariatur nobis sunt.</p>
+                        <h5 class="green-house">Green houses</h5>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum et, blanditiis ipsa fuga explicabo maiores commodi aperiam.</p>
                     </li>
                     <li>
-                        <h6>Community</h6>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis deserunt voluptates asperiores laboriosam dignissimos velit doloremque neque recusandae necessitatibus enim, saepe commodi qui voluptatibus? Earum accusamus aperiam culpa nihil corrupti.</p>
+                        <h5 class="community">Community</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis deserunt voluptates asperiores laboriosam dignissimos velit?</p>
                     </li>
                     <li>
-                        <h6><a href="#">Blog</a></h6>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nulla recusandae tenetur obcaecati consequuntur nam ea illo aliquam! Debitis dolor consectetur in at nobis rem ut unde quaerat officiis consequatur?</p>
+                        <h5 class="blog"><a href="#">Blog</a></h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nulla recusandae tenetur obcaecati consequuntur nam ea illo aliquam! Debitis dolor consectetur?</p>
                     </li>
                     <li>
-                        <h6>Get in touch</h6>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque repellat perferendis accusantium veritatis molestias deserunt quae, ratione fugit veniam blanditiis quis maxime pariatur aliquid laboriosam autem hic cum iusto voluptas?</p>
+                        <h5 class="get-in-touch">Get in touch</h5>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque repellat perferendis accusantium veritatis molestias deserunt quae.</p>
                     </li>
                 </ul>
             </div><!-- wrapper ends -->
