--- a/contact.html
+++ b/contact.html
@@ -11,15 +11,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Roboto&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./styles/style.css"> 
 </head>
-<body>
-    <header class="contact-header" id="contact">
+<body class="contact">
+    <header id="contact">
         
             
             <nav class="main-nav">
                 <div class="wrapper">
                     <h1>Planted</h1>
                     <ul>
-                        <li><a href="./index.html/">Home</a></li>
+                        <li><a href="./index.html">Home</a></li>
                         <li><a href="./index.html/#about">About</a></li>
                         <li><a href="./blog.html">Blog</a></li>
                         <li><a href="./contact.html">Contact</a></li>
@@ -39,13 +39,13 @@
         <div class="wrapper">
             <div class="contact-information">
                 <div class="social-media-icons">
-                    <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
+                    <a href="#"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
                     <span class="sr-only">Link to our Facebook</span>
-                    <i class="fa-brands fa-instagram" aria-hidden="true"></i>
+                    <a href="#"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
                     <span class="sr-only">Link to our Instagram</span>
-                    <i class="fa-brands fa-twitter" aria-hidden="true"></i>
+                    <a href="#"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
                     <span class="sr-only">Link to our Twitter</span>
-                    <i class="fa-brands fa-whatsapp" aria-hidden="true"></i>
+                    <a href="#"><i class="fa-brands fa-whatsapp" aria-hidden="true"></i></a>
                     <span class="sr-only">Link to our Whatsapp</span>
                 </div><!-- social media icons ends -->
 
