created blog style partial and finished scss for header

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis deserunt voluptates asperiores laboriosam dignissimos velit?</p>
                     </li>
                     <li>
-                        <h5 class="blog"><a href="#">Blog</a></h5>
+                        <h5 class="blog-link"><a href="./blog.html">Blog</a></h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nulla recusandae tenetur obcaecati consequuntur nam ea illo aliquam! Debitis dolor consectetur?</p>
                     </li>
                     <li>
