--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
 </head>
 <body class="blog">
     <header id="blog">
-        
+
         <nav class="main-nav">
             <div class="wrapper">
                 <h1>Planted</h1>
@@ -59,17 +59,19 @@
         <section class="latest-post">
             <div class="wrapper">
 
-                <div class="img-container">
-                    <img src="./planted-final-assets/post-image.jpg" alt="picture of rubber plants top leaves">
-                </div><!-- image container ends -->
+            <div class="img-container">
+                <img src="./planted-final-assets/post-image.jpg" alt="picture of rubber plants top leaves">
+            </div><!-- image container ends -->
 
+            
+                <div class="text-container"></div>
                 <h3>Our mission at Planted</h3>
-                <p>Monday, January 21th, 2019 by <a href="#">Yousra</a></p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente sint odio dolores, et quis doloribus qui. Suscipit voluptatibus delectus nisi maiores asperiores recusandae illum accusamus harum labore? Deleniti assumenda fugit recusandae quidem facilis expedita saepe, excepturi molestias laboriosam iste tempore.</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam ad cum ipsam quidem consequatur magnam rem ab, ducimus cumque dignissimos officiis deleniti? Explicabo ad deserunt corrupti recusandae. Nam nulla, architecto voluptate obcaecati saepe facilis error sed adipisci veritatis voluptatem sunt velit vel distinctio eum molestiae, ad illo incidunt mollitia aliquam.</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt modi in corrupti autem rerum suscipit nulla omnis pariatur ab rem fugiat sed eos, nam fugit, repellendus quam laudantium quasi magni, neque vero culpa nihil labore facilis deserunt. Eius excepturi quo animi tenetur ut deserunt ad minus atque natus impedit nobis vel perspiciatis non voluptas sed, dignissimos expedita quod cum magnam pariatur quasi sapiente placeat eaque. Ab, minima nemo sunt, labore tempora non atque eum est libero saepe voluptate? Consequatur aut consectetur esse nesciunt itaque ullam aperiam quis ex eum. Commodi in dignissimos est provident quaerat dolorem labore neque. Nobis, labore!</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus soluta quae, suscipit, expedita rerum quaerat amet dolorum provident, laboriosam vel commodi! Quos minus accusantium ducimus.</p>
-
+                    <p>Monday, January 21th, 2019 by <a href="#">Yousra</a></p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente sint odio dolores, et quis doloribus qui. Suscipit voluptatibus delectus nisi maiores asperiores recusandae illum accusamus harum labore? Deleniti assumenda fugit recusandae quidem facilis expedita saepe, excepturi molestias laboriosam iste tempore.</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam ad cum ipsam quidem consequatur magnam rem ab, ducimus cumque dignissimos officiis deleniti? Explicabo ad deserunt corrupti recusandae. Nam nulla, architecto voluptate obcaecati saepe facilis error sed adipisci veritatis voluptatem sunt velit vel distinctio eum molestiae, ad illo incidunt mollitia aliquam.</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt modi in corrupti autem rerum suscipit nulla omnis pariatur ab rem fugiat sed eos, nam fugit, repellendus quam laudantium quasi magni, neque vero culpa nihil labore facilis deserunt. Eius excepturi quo animi tenetur ut deserunt ad minus atque natus impedit nobis vel perspiciatis non voluptas sed, dignissimos expedita quod cum magnam pariatur quasi sapiente placeat eaque. Ab, minima nemo sunt, labore tempora non atque eum est libero saepe voluptate? Consequatur aut consectetur esse nesciunt itaque ullam aperiam quis ex eum. Commodi in dignissimos est provident quaerat dolorem labore neque. Nobis, labore!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus soluta quae, suscipit, expedita rerum quaerat amet dolorum provident, laboriosam vel commodi! Quos minus accusantium ducimus.</p>
+                </div><!-- text container ends -->
             </div><!-- wrapper ends -->
         </section><!-- latest post ends -->
     </main>
@@ -77,15 +79,19 @@
     <aside>
         <div class="wrapper">
             <h4>Comments:</h4>
-            <div>
+            <div class="comment-1">
                 <img src="./planted-final-assets/profile-image.jpg" alt="user avatar">
-                <h5>Tuesday October 9th, 2018 by Jeremy</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore itaque illum pariatur aliquid reiciendis at placeat optio consectetur, doloribus dolor sequi unde est! Voluptatem cupiditate non qui nisi eum magnam excepturi consectetur consequatur eius! Tenetur magni nam enim cumque doloribus.</p>
+                <div class="text-container">
+                    <h5>Tuesday October 9th, 2018 by Jeremy</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore itaque illum pariatur aliquid reiciendis at placeat optio consectetur, doloribus dolor sequi unde est! Voluptatem cupiditate non qui nisi eum magnam excepturi consectetur consequatur eius! Tenetur magni nam enim cumque doloribus.</p>
+                </div>
             </div>
-            <div>
+            <div class="comment-2">
                 <img src="./planted-final-assets/profile-image-2.jpg" alt="user avatar">
-                <h5>Wednesday October 10th, 2018 by Julia</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione facere nihil quibusdam dolore laborum, quia assumenda corrupti eum illum magni soluta, aperiam sunt, minima impedit esse.</p>
+                <div class="text-container">
+                    <h5>Wednesday October 10th, 2018 by Julia</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione facere nihil quibusdam dolore laborum, quia assumenda corrupti eum illum magni soluta, aperiam sunt, minima impedit esse.</p>
+                </div>
             </div>
 
             <div class="comment-form-container">
