made header and images more responsive

--- a/blog.html
+++ b/blog.html
@@ -37,12 +37,12 @@
         <section class="about-and-posts">
 
             <div class="img-container">
-                <!-- insert image as background -->
+                <img src="./planted-final-assets/side-bar-image.jpg" alt="concrete wall with old wood window">
             </div><!-- image container ends -->
 
             <div class="about-planted">
                 <h4>About Planted</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis quos veniam nostrum? <a href="./index.html/#about">Find out more</a>.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis quos veniam nostrum? <a href="./index.html#about">Find out more</a>.</p>
             </div><!-- about planted ends -->
             
             <div class="recent-posts">
@@ -57,14 +57,14 @@
         </section><!-- about and posts section ends -->
 
         <section class="latest-post">
-            <div class="wrapper">
+
 
             <div class="img-container">
                 <img src="./planted-final-assets/post-image.jpg" alt="picture of rubber plants top leaves">
             </div><!-- image container ends -->
 
             
-                <div class="text-container"></div>
+                <div class="text-container">
                 <h3>Our mission at Planted</h3>
                     <p>Monday, January 21th, 2019 by <a href="#">Yousra</a></p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente sint odio dolores, et quis doloribus qui. Suscipit voluptatibus delectus nisi maiores asperiores recusandae illum accusamus harum labore? Deleniti assumenda fugit recusandae quidem facilis expedita saepe, excepturi molestias laboriosam iste tempore.</p>
@@ -72,27 +72,30 @@
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt modi in corrupti autem rerum suscipit nulla omnis pariatur ab rem fugiat sed eos, nam fugit, repellendus quam laudantium quasi magni, neque vero culpa nihil labore facilis deserunt. Eius excepturi quo animi tenetur ut deserunt ad minus atque natus impedit nobis vel perspiciatis non voluptas sed, dignissimos expedita quod cum magnam pariatur quasi sapiente placeat eaque. Ab, minima nemo sunt, labore tempora non atque eum est libero saepe voluptate? Consequatur aut consectetur esse nesciunt itaque ullam aperiam quis ex eum. Commodi in dignissimos est provident quaerat dolorem labore neque. Nobis, labore!</p>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus soluta quae, suscipit, expedita rerum quaerat amet dolorum provident, laboriosam vel commodi! Quos minus accusantium ducimus.</p>
                 </div><!-- text container ends -->
-            </div><!-- wrapper ends -->
+
         </section><!-- latest post ends -->
     </main>
 
     <aside>
         <div class="wrapper">
             <h4>Comments:</h4>
-            <div class="comment-1">
+
+            <ul>
+            <li class="comment-1">
                 <img src="./planted-final-assets/profile-image.jpg" alt="user avatar">
                 <div class="text-container">
                     <h5>Tuesday October 9th, 2018 by Jeremy</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore itaque illum pariatur aliquid reiciendis at placeat optio consectetur, doloribus dolor sequi unde est! Voluptatem cupiditate non qui nisi eum magnam excepturi consectetur consequatur eius! Tenetur magni nam enim cumque doloribus.</p>
                 </div>
-            </div>
-            <div class="comment-2">
+            </li>
+            <li class="comment-2">
                 <img src="./planted-final-assets/profile-image-2.jpg" alt="user avatar">
                 <div class="text-container">
                     <h5>Wednesday October 10th, 2018 by Julia</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione facere nihil quibusdam dolore laborum, quia assumenda corrupti eum illum magni soluta, aperiam sunt, minima impedit esse.</p>
                 </div>
-            </div>
+            </li>
+            </ul>
 
             <div class="comment-form-container">
                 <form action="#" class="commentForm" name="commentForm">
