made adjustments to home header

--- a/blog.html
+++ b/blog.html
@@ -36,7 +36,7 @@
             <section class="about-and-posts">
 
                 <div class="img-container">
-                    <img src="./planted-final-assets/side-bar-image.jpg" alt="concrete wall with old wood window">
+                    <img src="./planted-final-assets/side-bar-image.jpg" alt="">
                 </div><!-- image container ends -->
 
                 <div class="about-planted">
@@ -58,7 +58,7 @@
             <section class="latest-post">
 
                 <div class="img-container">
-                    <img src="./planted-final-assets/post-image.jpg" alt="picture of rubber plants top leaves">
+                    <img src="./planted-final-assets/post-image.jpg" alt="rubber plants top leaves">
                 </div><!-- image container ends -->
 
                 
