--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
                 </ul>
             </nav><!-- main nav ends -->
 
-            <!-- <div> -->
-                <h2><span>Planted</span> Invitation</h2>
-                <div class="main-and-aside-container">
-                    <div class="header-img-2">
-                        <img src="./planted-final-assets/header-box.jpg" alt="">
-                    </div>
-                </div>
-            <!-- </div> -->
+            <h2><span>Planted</span> Invitation</h2>
+
+            <div class="header-container">    
+                <div class="header-img-2">
+                    <img src="./planted-final-assets/header-box.jpg" alt="">
+                </div><!-- header-img-2 ends -->
+            </div><!-- header container ends -->
 
         </div><!-- wrapper ends -->
     </header><!-- header ends -->
@@ -106,7 +105,7 @@
             <section class="founder">
                 <div class="wrapper">
                     <div class="img-container">
-                        <img src="./planted-final-assets/founder.jpg" alt="photo of founder standing in large garden">
+                        <img src="./planted-final-assets/founder.jpg" alt="founder standing in large garden">
                     </div>
 
                     <div class="text-container">
