created partial for media query of home page and finished the syles of it

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                     <li><a href="./blog.html">Blog</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
+                <i class="fa-solid fa-bars menu-icon" aria-hidden="true"></i>
+                <span class="sr-only">Menu</span>
             </nav><!-- main nav ends -->
 
             <h2><span>Planted</span> Invitation</h2>
