--- a/blog.html
+++ b/blog.html
@@ -64,7 +64,7 @@
                 
                 <div class="text-container">
                     <h3>Our mission at Planted</h3>
-                        <p>Monday, January 21th, 2019 by <a href="#">Yousra</a></p>
+                        <p>Monday, January 21st, 2019 by <a href="#">Yousra</a></p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente sint odio dolores, et quis doloribus qui. Suscipit voluptatibus delectus nisi maiores asperiores recusandae illum accusamus harum labore? Deleniti assumenda fugit recusandae quidem facilis expedita saepe, excepturi molestias laboriosam iste tempore.</p>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam ad cum ipsam quidem consequatur magnam rem ab, ducimus cumque dignissimos officiis deleniti? Explicabo ad deserunt corrupti recusandae. Nam nulla, architecto voluptate obcaecati saepe facilis error sed adipisci veritatis voluptatem sunt velit vel distinctio eum molestiae, ad illo incidunt mollitia aliquam.</p>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt modi in corrupti autem rerum suscipit nulla omnis pariatur ab rem fugiat sed eos, nam fugit, repellendus quam laudantium quasi magni, neque vero culpa nihil labore facilis deserunt. Eius excepturi quo animi tenetur ut deserunt ad minus atque natus impedit nobis vel perspiciatis non voluptas sed, dignissimos expedita quod cum magnam pariatur quasi sapiente placeat eaque. Ab, minima nemo sunt, labore tempora non atque eum est libero saepe voluptate? Consequatur aut consectetur esse nesciunt itaque ullam aperiam quis ex eum. Commodi in dignissimos est provident quaerat dolorem labore neque. Nobis, labore!</p>
