created media query partial for contact and finished styles forr it

--- a/blog.html
+++ b/blog.html
@@ -100,7 +100,7 @@
             </ul><!-- ul ends -->
 
             <div class="comment-form-container">
-                <form action="#" class="commentForm" name="commentForm">
+                <form action="#" class="comment-form" name="comment-form">
                     <label for="name" class="sr-only">Name</label>
                     <input type="text" id="name" placeholder="Name" required>
 
