--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Roboto&display=swap" rel="stylesheet"> 
+    <script src="https://kit.fontawesome.com/a0e4c21e13.js" crossorigin="anonymous"></script>  
     <link rel="stylesheet" href="./styles/style.css"> 
 </head>
 <body class="contact">
@@ -23,6 +24,8 @@
                     <li><a href="./blog.html">Blog</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
+                <i class="fa-solid fa-bars menu-icon" aria-hidden="true"></i>
+                <span class="sr-only">Menu</span>
             </div><!-- wrapper ends -->
         </nav><!-- main nav ends -->
 
