created mobile slide menu

--- a/contact.html
+++ b/contact.html
@@ -18,14 +18,17 @@
         <nav class="main-nav">
             <div class="wrapper">
                 <h1>Planted</h1>
+                <input type="checkbox" id="open-slide-menu">
+                <label for="open-slide-menu">
+                    <i class="fa-solid fa-bars menu-icon" aria-hidden="true"></i>
+                    <span class="sr-only">Menu button</span>
+                </label>
                 <ul>
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./index.html/#about">About</a></li>
                     <li><a href="./blog.html">Blog</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
-                <i class="fa-solid fa-bars menu-icon" aria-hidden="true"></i>
-                <span class="sr-only">Menu</span>
             </div><!-- wrapper ends -->
         </nav><!-- main nav ends -->
 
