--- a/index.html
+++ b/index.html
@@ -17,14 +17,18 @@
         <div class="wrapper">            
             <nav class="main-nav">
                 <h1>Planted</h1>
+                <input type="checkbox" id="open-slide-menu">
+                <label for="open-slide-menu">
+                    <i class="fa-solid fa-bars menu-icon" aria-hidden="true"></i>
+                    <span class="sr-only">Menu button</span>
+                </label>
                 <ul>
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="./blog.html">Blog</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
-                <i class="fa-solid fa-bars menu-icon" aria-hidden="true"></i>
-                <span class="sr-only">Menu</span>
+                
             </nav><!-- main nav ends -->
 
             <h2><span>Planted</span> Invitation</h2>
