--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
                 </label>
                 <ul>
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="./index.html/#about">About</a></li>
+                    <li><a href="./index.html#about">About</a></li>
                     <li><a href="./blog.html">Blog</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
