made hamburger icon more accessible

--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,8 @@
                 <h1>Planted</h1>
                 <input type="checkbox" id="open-slide-menu">
                 <label for="open-slide-menu">
-                    <i class="fa-solid fa-bars menu-icon" aria-hidden="true"></i>
-                    <span class="sr-only">Menu button</span>
+                    <i class="fa-solid fa-bars menu-icon" aria-hidden="true" title="open menu"></i>
+                    <span class="sr-only">open menu</span>
                 </label>
                 <ul>
                     <li><a href="./index.html">Home</a></li>
