fixed aria for social media icons

--- a/contact.html
+++ b/contact.html
@@ -42,14 +42,10 @@
         <div class="wrapper">
             <div class="contact-information">
                 <div class="social-media-icons">
-                    <a href="#"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
-                    <span class="sr-only">Link to our Facebook</span>
-                    <a href="#"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
-                    <span class="sr-only">Link to our Instagram</span>
-                    <a href="#"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
-                    <span class="sr-only">Link to our Twitter</span>
-                    <a href="#"><i class="fa-brands fa-whatsapp" aria-hidden="true"></i></a>
-                    <span class="sr-only">Link to our Whatsapp</span>
+                    <a href="#"><i class="fa-brands fa-facebook-f" aria-label="Link to our Facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram" aria-label="Link to our Instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter" aria-label="Link to our Twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-whatsapp" aria-label="Link to our Whatsapp"></i></a>
                 </div><!-- social media icons ends -->
 
                 <p>info@email.com</p>
