added image file to be used when form is submitted and made a few changes to styles and html to make sure styles are being applied after js runs

--- a/blog.html
+++ b/blog.html
@@ -84,8 +84,8 @@
             
             <h4>Comments:</h4>
 
-            <ul>
-                <li class="comment-1">
+            <ul id="comments">
+                <li>
                     <img src="./planted-final-assets/profile-image.jpg" alt="user avatar">
                     <div class="text-container">
                         <h5>Tuesday October 9th, 2018 by Jeremy</h5>
@@ -93,7 +93,7 @@
                     </div>
                 </li><!-- comment 1 ends -->
 
-                <li class="comment-2">
+                <li>
                     <img src="./planted-final-assets/profile-image-2.jpg" alt="user avatar">
                     <div class="text-container">
                         <h5>Wednesday October 10th, 2018 by Julia</h5>
@@ -125,6 +125,6 @@
             <p>Copyright © 2018 HackerYou</p>
         </div><!-- wrapper ends -->
     </footer><!-- footer ends -->
-
+<script src="./app/app.js"></script>
 </body>
 </html>
